<resources>
    <string name="app_name">Imagenes de perros</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">image</string>
    <string name="not_found_image">Algo ha pasado, intenta más tarde</string>
    <string name="not_found_text">Algo ha pasado, intenta de nuevo</string>
    <string name="breed">breed</string>
    <string name="itemImage">itemImage</string>
    <string name="save">Guardar</string>
    <string name="favorite">favorite</string>
    <string name="cancelar">Cancelar</string>
    <string name="enviar">Enviar</string>
    <string name="buscar">Buscar</string>
    <string name="raza">Filtrar por raza</string>
    <string name="sub_raza">Filtrar por Sub-raza</string>
    <string name="search">Buscar</string>
    <string name="tab_2"></string>
    <string name="failed_get_images">Hubo un error al obtener las imagenes, intenta de nuevo</string>
    <string name="internet_problems">No hay conexión a internet, asegurate estar conectado a una red</string>
    <string name="download">Descarga Completa</string>
    <string name="toolbar_text">Imagenes de perros</string>
    <string name="addFavorite">Se ha añadido a favoritos</string>
    <string name="deleteFavorite">Se ha eliminado de los favoritos</string>
</resources>