<?xml version="1.0" encoding="utf-8"?>


<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="5dp"
    tools:context=".view.fragments.SearchDialog"

    >

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Buscador"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvBreed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/raza"
            android:textSize="15sp"
            android:textStyle="bold"

            />

        <Spinner
            android:id="@+id/sBreed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center">


        </Spinner>

        <TextView
            android:id="@+id/tvSubBreed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/sub_raza"
            android:textSize="15sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <Spinner
            android:id="@+id/sSubBreed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:visibility="gone">

        </Spinner>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/lightRed"
                android:minWidth="100dp"
                android:text="@string/cancelar"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/btnSearch"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/lightGreen"
                android:minWidth="100dp"
                android:text="@string/buscar"
                android:textColor="#4CAF50" />


        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
