<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:maxWidth="2000dp"
    android:minWidth="1200dp"
    tools:context=".view.fragments.DogsDialog">


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_container_dogs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvImageDog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:id="@+id/ivDogPhotoItem"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/itemImage"
                                android:scaleType="centerCrop" />

                            <com.google.android.material.floatingactionbutton.FloatingActionButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignEnd="@id/ivDogPhotoItem"
                                android:layout_alignBottom="@id/ivDogPhotoItem"
                                android:layout_margin="@dimen/fab_margin"
                                android:contentDescription="@string/favorite"
                                android:elevation="4dp"
                                android:src="@drawable/ic_favorite_border" />
                        </RelativeLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvDogBreed"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="2dp"
                                android:elegantTextHeight="true"
                                android:ellipsize="end"
                                android:lines="1"
                                android:text="@string/breed"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="6dp"
                    app:layout_constraintBottom_toBottomOf="@+id/scroll"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvDogs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        tools:listitem="@layout/item_dog" />


                </com.google.android.material.card.MaterialCardView>

                <include
                    android:id="@+id/layoutNotFound"
                    layout="@layout/not_found_layout" />


            </LinearLayout>


        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</androidx.constraintlayout.widget.ConstraintLayout>